# the-story-of-stone

./: .gitattributes  .gitignore  .markdownlint-cli2.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
agent-platform/: .dockerignore  Cargo.toml  Dockerfile
agent-platform/crates/agent-core/: Cargo.toml
agent-platform/crates/agent-core/src/: api.rs  error.rs  ids.rs  lib.rs  model.rs  policy.rs  telemetry.rs  traits.rs
agent-platform/crates/agent-manager/: Cargo.toml
agent-platform/crates/agent-manager/src/: control_services.rs  external_action_services.rs  http_support.rs  lib.rs  lifecycle_services.rs  main.rs  observer_services.rs  request_services.rs  run_admin_services.rs  side_effect_services.rs  telemetry_support.rs
agent-platform/crates/agent-orchestrator/: Cargo.toml
agent-platform/crates/agent-orchestrator/src/: main.rs
agent-platform/crates/agent-runtime/: Cargo.toml
agent-platform/crates/agent-runtime/src/: lib.rs  main.rs
agent-platform/crates/agent-store/: Cargo.toml
agent-platform/crates/agent-store/migrations/: 0001_p0_agent_platform.sql  0002_session_idempotency.sql  0003_run_retry_backoff.sql  0004_open_webui_bridge_bindings.sql  0005_bridge_hardening.sql  0006_p1_external_action_readiness.sql  0006_p1_side_effect_readiness.sql  0007_external_action_compensation.sql
agent-platform/crates/agent-store/src/: lib.rs  memory.rs  pg.rs  repository.rs
agent-platform/crates/agent-worker/: Cargo.toml
agent-platform/crates/agent-worker/src/: lib.rs  main.rs
agent-platform/crates/agentctl/: Cargo.toml
agent-platform/crates/agentctl/src/: main.rs
agent-platform/crates/global-router/: Cargo.toml  Dockerfile
agent-platform/crates/global-router/src/: main.rs
agent-platform/crates/tonglingyu-gateway/: Cargo.toml  Dockerfile
agent-platform/crates/tonglingyu-gateway/evals/fixtures/: context_projection.jsonl  memory_policy.jsonl  package_claims.jsonl  question_resolution.jsonl  rag_evidence.jsonl  request_safety.jsonl  retrieval_policy.jsonl  reviewer_security.jsonl  session_summary.jsonl  streaming_dedupe.jsonl
agent-platform/crates/tonglingyu-gateway/resources/: current_window_compression_rules.json  ellipsis_resolution_rules.json  question_frame_rules.json  referent_candidate_rules.json  subject_ontology.json
agent-platform/crates/tonglingyu-gateway/src/: auth.rs  context_governance.rs  context_rules.rs  conversation_state.rs  draft_revision.rs  eval_command.rs  llm_agent_contracts.rs  llm_agent_prompt.rs  llm_agent_validator.rs  llm_contracts.rs  llm_eval.rs  llm_modes.rs  llm_provider.rs  llm_resolver.rs  main.rs  plan.rs  question_frame.rs  response.rs  retrieval_suggestion.rs  rqa_lifecycle.rs  tests.rs  user_response_safety.rs
agent-platform/crates/tonglingyu-gateway/src/question_frame/: tests.rs
agent-platform/crates/tonglingyu-runtime/: Cargo.toml
agent-platform/crates/tonglingyu-runtime/resources/: evidence_slot_rules.json  governance_rules.json  ontology_aliases.json  query_expansions.json  retrieval_rules.json
agent-platform/crates/tonglingyu-runtime/src/: answer_composer.rs  evidence_slot_rules.rs  governance_rules.rs  lib.rs  online_evidence_card_ingest.rs  ontology_aliases.rs  question_frame.rs  retrieval_rules.rs  tests.rs  upstream_bundle.rs
agent-platform/crates/tonglingyu-runtime/src/answer_composer/: tests.rs
agent-platform/crates/tonglingyu-runtime/src/evidence_slot_rules/: tests.rs
agent-platform/crates/tonglingyu-runtime/src/governance_rules/: tests.rs
agent-platform/crates/tonglingyu-runtime/src/online_evidence_card_ingest/: tests.rs
agent-platform/crates/tonglingyu-runtime/src/ontology_aliases/: tests.rs
agent-platform/crates/tonglingyu-runtime/src/question_frame/: tests.rs
agent-platform/crates/tonglingyu-runtime/src/retrieval_rules/: tests.rs
agent-platform/scripts/: action-gateway-smoke.sh  external-action-contract-smoke.sh  tonglingyu-calibration-job-smoke.sh  tonglingyu-gateway-smoke.sh  tonglingyu-knowledge-calibration-run.sh
deploy/: README.md  docker-compose.yml
deploy/runbooks/: tonglingyu-rqa-release-runbook.md
deploy/scripts/: bump-deploy-version.sh  deploy-versioned-stack.sh  ensure-openwebui-tonglingyu-model-access.sh  ensure-tonglingyu-gateway-env.sh  env-backup.sh  generate-tonglingyu-post-release-ops-evidence.sh  install-openwebui-function-db.sh  install-openwebui-function.sh  install-openwebui-gateway-admin-action-db.sh  install-openwebui-gateway-admin-action.sh  install-openwebui-gateway-feedback-action-db.sh  migrate-runtime-data.sh  prepare-tonglingyu-remote-security-evidence.sh  prepare-tonglingyu-rqa-restore-canary.sh  record-openwebui-browser-review-evidence.sh  remediate-tonglingyu-kb-source-metadata.sh  remediate-tonglingyu-rqa-eval-artifacts.sh  render-hermes-config.sh  start-local-stack.sh  sync-tonglingyu-remote-release-tools.sh  test-deploy-env-file-contract.sh  test-openwebui-gateway-admin-action-contract.sh  test-tonglingyu-gateway-env-contract.sh  test-tonglingyu-release-readiness-contract.sh  verify-model-upstream-network.sh  verify-openwebui-browser-review-evidence.sh  verify-openwebui-function.sh  verify-openwebui-gateway-admin-action.sh  verify-tonglingyu-knowledge-state-release.sh  verify-tonglingyu-post-release-monitor.sh  verify-tonglingyu-release-ops-readiness.sh  verify-tonglingyu-release-readiness-report.sh  (+19 more)
docs/: CHAT_HUIXIANGDOU_OPENWEBUI_TEST_PLAN.md  CHAT_HUIXIANGDOU_OPENWEBUI_TEST_REPORT.md  DIRECTORY_STRUCTURE.md  INTERACTIVE_BOT_VISION.md  KB_SERVICE_PLAN.md  LINT_AND_TEST_RULES.md  OPEN_WEBUI_AGENT_IDENTITY_BRIDGE_IMPLEMENTATION_CHECKLIST.md  OPEN_WEBUI_AGENT_IDENTITY_BRIDGE_PLAN.md  PROGRESS.md  PROJECT_OVERVIEW.md  RUNBOOK.md  RUST_CODING_RULES.md  VERIFICATION_WORKFLOW.md  VERSIONING_RULES.md  agent-manager-design.md
resources/: hongloumeng_asr_glossary.txt
scripts/: bilibili_hlm_pipeline.py  check-tonglingyu-no-question-hardcode.sh  download_ctext_hongloumeng.py  download_wikisource.py  extract_epub.py  extract_epub_hongloumeng.py  qa.sh  validate_source_snapshots.py  version.py
tests/: test_version_management.py
(+954 files in other folders)
