[package]
name = "agent-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
metrics.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
uuid.workspace = true
