[package]
name = "agent-manager"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
agent-core.workspace = true
agent-runtime.workspace = true
agent-store.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
config.workspace = true
dotenvy.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
metrics.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
