[package]
name = "agent-orchestrator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
agent-core.workspace = true
anyhow.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
http.workspace = true
metrics.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
