[package]
name = "agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
agent-core.workspace = true
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
metrics.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
