[package]
name = "agent-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
agent-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
