[package]
name = "agent-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
agent-core.workspace = true
agent-runtime.workspace = true
agent-store.workspace = true
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
dotenvy.workspace = true
metrics.workspace = true
serde_json.workspace = true
time.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
