[package]
name = "tonglingyu-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
agent-core.workspace = true
agent-runtime.workspace = true
anyhow.workspace = true
async-trait.workspace = true
ferrous-opencc.workspace = true
futures-util.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
